Corrected column name syntax error in clia_summary.Rmd

--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -106,45 +106,45 @@ colnames(sumTab) <- c("Sample.ID",
 
 ```{r format-sumTab-empty, include=FALSE, eval=ifelse(params$runNormal == FALSE, TRUE, FALSE)}
 #Make empty sumTab
-sumTab <- tibble("Sample.ID" = character(), 
-                      "Sample.Name" = character(), 
-                      "Pangolin" = character(), 
-                      "Pangolin.QC" = character(), 
-                      "NextClade" = character(), 
-                      "#FastQC.R1" = character(), 
-                      "#FastQC.R2" = character(), 
-                      "#Seqyclean.Pairs" = character(), 
-                      "%Seqyclean.Pairs" = character(), 
-                      "Depth.Post.Trim" = character(), 
-                      "Coverage.Post.Trim" = character(), 
-                      "%Human.Reads" = character(), 
-                      "%SC2.Reads" = character(), 
-                      "#iVar.Variants" = character(), 
-                      "#BCFTools.Variants" = character(), 
-                      "#BEDTools.Failed.Amps" = character(), 
-                      "#SAMTools.Failed.Amps" = character(), 
-                      "#N" = character(), 
-                      "#Degenerate" = character(), 
-                      "#ACTG" = character(), 
-                      "#Total.Bases" = character(), 
-                      "Total.Reads.Analyzed" = character(), 
-                      "%N" = character(), 
-                      "Mean.Cov.Depth" = character(), 
-                      "%Reads.Mapping.SC2" = character(), 
-                      "Vadr" = character(), 
-                      "Vadr.All.ORF.Shift" = character(),
-                      "Vadr.S.ORF.Shift" = character(), 
-                      "AA.Changes.S" = character(),
-                      "Length.Longest.Insert" = character(), 
-                      "Length.Longest.Del" = character(),
-                      "pangoLEARN.v" = character(),
-                      "#Lineage.Subs" = character(),
-                      "GenBank#" = character(),
-                      "ORFs.Passing.QC" = character(),
-                      "Coverage.S" = character(),
-                      "Mean.Depth.S" = character(),
-                      "Percent.Pos.Min.Cov.S" = character(),
-                      "Percent.Ns.S" = character()
+sumTab <- tibble(Sample.ID = character(), 
+                      Sample.Name = character(), 
+                      Pangolin = character(), 
+                      Pangolin.QC = character(), 
+                      NextClade = character(), 
+                      `#FastQC.R1` = character(), 
+                      `#FastQC.R2` = character(), 
+                      `#Seqyclean.Pairs` = character(), 
+                      %Seqyclean.Pairs = character(), 
+                      Depth.Post.Trim = character(), 
+                      Coverage.Post.Trim = character(), 
+                      %Human.Reads = character(), 
+                      %SC2.Reads = character(), 
+                      `#iVar.Variants` = character(), 
+                      `#BCFTools.Variants` = character(), 
+                      `#BEDTools.Failed.Amps` = character(), 
+                      `#SAMTools.Failed.Amps` = character(), 
+                      `#N` = character(), 
+                      `#Degenerate` = character(), 
+                      `#ACTG` = character(), 
+                      `#Total.Bases` = character(), 
+                      Total.Reads.Analyzed = character(), 
+                      %N = character(), 
+                      Mean.Cov.Depth = character(), 
+                      %Reads.Mapping.SC2 = character(), 
+                      Vadr = character(), 
+                      Vadr.All.ORF.Shift = character(),
+                      Vadr.S.ORF.Shift = character(), 
+                      AA.Changes.S = character(),
+                      Length.Longest.Insert = character(), 
+                      Length.Longest.Del = character(),
+                      pangoLEARN.v = character(),
+                      `#Lineage.Subs` = character(),
+                     `GenBank#` = character(),
+                      ORFs.Passing.QC = character(),
+                      Coverage.S = character(),
+                      Mean.Depth.S = character(),
+                      Percent.Pos.Min.Cov.S = character(),
+                      Percent.Ns.S = character()
 )
 ```
 
