Corrected more column name syntax errors in clia_summary.Rmd

--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -114,11 +114,11 @@ sumTab <- tibble(Sample.ID = character(),
                       `#FastQC.R1` = character(), 
                       `#FastQC.R2` = character(), 
                       `#Seqyclean.Pairs` = character(), 
-                      %Seqyclean.Pairs = character(), 
+                      `%Seqyclean.Pairs` = character(), 
                       Depth.Post.Trim = character(), 
                       Coverage.Post.Trim = character(), 
-                      %Human.Reads = character(), 
-                      %SC2.Reads = character(), 
+                      `%Human.Reads` = character(), 
+                      `%SC2.Reads` = character(), 
                       `#iVar.Variants` = character(), 
                       `#BCFTools.Variants` = character(), 
                       `#BEDTools.Failed.Amps` = character(), 
@@ -128,9 +128,9 @@ sumTab <- tibble(Sample.ID = character(),
                       `#ACTG` = character(), 
                       `#Total.Bases` = character(), 
                       Total.Reads.Analyzed = character(), 
-                      %N = character(), 
+                      `%N` = character(), 
                       Mean.Cov.Depth = character(), 
-                      %Reads.Mapping.SC2 = character(), 
+                      `%Reads.Mapping.SC2` = character(), 
                       Vadr = character(), 
                       Vadr.All.ORF.Shift = character(),
                       Vadr.S.ORF.Shift = character(), 
