--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -95,7 +95,7 @@ colnames(sumTab) <- c("Sample.ID",
                       "Length.Longest.Del",
                       "pangoLEARN.v",
                       "#Lineage.Subs",
-                      "GenBank.ID",
+                      "GenBank#",
                       "ORFs.Passing.QC",
                       "Coverage.S",
                       "Mean.Depth.S",
@@ -139,7 +139,7 @@ sumTab <- tibble(Sample.ID = character(),
                   Length.Longest.Del = character(),
                   pangoLEARN.v = character(),
                   `#Lineage.Subs` = character(),
-                  GenBank.ID = character(),
+                  `GenBank#` = character(),
                   ORFs.Passing.QC = character(),
                   Coverage.S = character(),
                   Mean.Depth.S = character(),
@@ -166,7 +166,7 @@ elimsTab <- select(sumTab,
                    Lineage = Pangolin,
                    Number.Lineage.Defined.Substitutions = `#Lineage.Subs`,
                    pangoLEARN.version = pangoLEARN.v,
-                   `GenBank.Accession#` = GenBank.ID) %>%
+                   `GenBank.Accession#` = `GenBank#`) %>%
             arrange(Sample.Name)
 qcTab <- select(sumTab,
                 Sample.Name,
@@ -186,7 +186,7 @@ sumTab <- select(sumTab,
                  -Pangolin,
                  -`#Lineage.Subs`,
                  -pangoLEARN.v,
-                 -GenBank.ID
+                 -`GenBank#`,
                  -Pangolin.QC,
                  -`%N`,
                  -Percent.Ns.S,
