Fixing empy column data types to allow reuse of code

--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -111,40 +111,40 @@ sumTab <- tibble(Sample.ID = character(),
                   Pangolin = character(), 
                   Pangolin.QC = character(), 
                   NextClade = character(), 
-                  `#FastQC.R1` = character(), 
-                  `#FastQC.R2` = character(), 
-                  `#Seqyclean.Pairs` = character(), 
-                  `%Seqyclean.Pairs` = character(), 
-                  Depth.Post.Trim = character(), 
-                  Coverage.Post.Trim = character(), 
-                  `%Human.Reads` = character(), 
-                  `%SC2.Reads` = character(), 
-                  `#iVar.Variants` = character(), 
-                  `#BCFTools.Variants` = character(), 
-                  `#BEDTools.Failed.Amps` = character(), 
-                  `#SAMTools.Failed.Amps` = character(), 
-                  `#N` = character(), 
-                  `#Degenerate` = character(), 
-                  `#ACTG` = character(), 
-                  `#Total.Bases` = character(), 
-                  Total.Reads.Analyzed = character(), 
-                  `%N` = character(), 
-                  Mean.Cov.Depth = character(), 
-                  `%Reads.Mapping.SC2` = character(), 
+                  `#FastQC.R1` = numeric(), 
+                  `#FastQC.R2` = numeric(), 
+                  `#Seqyclean.Pairs` = numeric(), 
+                  `%Seqyclean.Pairs` = numeric(), 
+                  Depth.Post.Trim = numeric(), 
+                  Coverage.Post.Trim = numceric(), 
+                  `%Human.Reads` = numeric(), 
+                  `%SC2.Reads` = numeric(), 
+                  `#iVar.Variants` = numeric(), 
+                  `#BCFTools.Variants` = numeric(), 
+                  `#BEDTools.Failed.Amps` = numeric(), 
+                  `#SAMTools.Failed.Amps` = numeric(), 
+                  `#N` = numeric(), 
+                  `#Degenerate` = numeric(), 
+                  `#ACTG` = numeric(), 
+                  `#Total.Bases` = numeric(), 
+                  Total.Reads.Analyzed = numeric(), 
+                  `%N` = numeric(), 
+                  Mean.Cov.Depth = numeric(), 
+                  `%Reads.Mapping.SC2` = numeric(), 
                   Vadr = character(), 
                   Vadr.All.ORF.Shift = character(),
                   Vadr.S.ORF.Shift = character(), 
                   AA.Changes.S = character(),
-                  Length.Longest.Insert = character(), 
-                  Length.Longest.Del = character(),
+                  Length.Longest.Insert = numeric(), 
+                  Length.Longest.Del = numeric(),
                   pangoLEARN.v = character(),
-                  `#Lineage.Subs` = character(),
+                  `#Lineage.Subs` = numeric(),
                   `GenBank#` = character(),
-                  ORFs.Passing.QC = character(),
-                  Coverage.S = character(),
-                  Mean.Depth.S = character(),
-                  Percent.Pos.Min.Cov.S = character(),
-                  Percent.Ns.S = character()
+                  ORFs.Passing.QC = numeric(),
+                  Coverage.S = numeric(),
+                  Mean.Depth.S = numeric(),
+                  Percent.Pos.Min.Cov.S = numeric(),
+                  Percent.Ns.S = numeric()
 )
 ```
 
