--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -116,7 +116,7 @@ sumTab <- tibble(Sample.ID = character(),
                   `#Seqyclean.Pairs` = numeric(), 
                   `%Seqyclean.Pairs` = numeric(), 
                   Depth.Post.Trim = numeric(), 
-                  Coverage.Post.Trim = numceric(), 
+                  Coverage.Post.Trim = numeric(), 
                   `%Human.Reads` = numeric(), 
                   `%SC2.Reads` = numeric(), 
                   `#iVar.Variants` = numeric(), 
