--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -281,7 +281,7 @@ newTableSplittr <- function(t, f, c) {
   repeatCol <- select(t, matches(c))
   t <- select(t, -matches(c))
   myColNames <- colnames(t)
-  numSplits <- floor(length(myColNames) / f)
+  numSplits <- ceiling(length(myColNames) / f)
   for (g in 1:numSplits) {
     x <- ifelse(g * f <= length(myColNames), g * f, length(myColNames))
     subT <- select(t, all_of(myColNames[(g * f - f + 1):x])) %>%
