--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -31,14 +31,14 @@ library(kableExtra)
 
 ```{r thresholds, include=FALSE}
 fastqcRawThreshold <- 100000          # min number of raw reads accepted in fastqc_raw column
-seqycleanKeptReviewThreshold <- 90    # min percent of reads remaining after seqyclean (pass/review)
-seqycleanKeptFailThreshold <- 70      # min percent of reads remaining after seqyclean (review/fail)
+#seqycleanKeptReviewThreshold <- 90    # min percent of reads remaining after seqyclean (pass/review)
+#seqycleanKeptFailThreshold <- 70      # min percent of reads remaining after seqyclean (review/fail)
 depthAfterTrimThreshold <- 100        # min depth after trimming
-covAfterTrimThreshold <- 95           # min coverage after trimming
-perHumanThreshold <- NULL             # max percentage human reads allowed per sample (not in use)
+covAfterTrimThreshold <- 90           # min coverage after trimming
+#perHumanThreshold <- NULL             # max percentage human reads allowed per sample (not in use)
 perSC2Threshold <- 65                 # min percentage SC2 reads allowed per sample
 perNThreshold <- 10                   # max percentage N allowed in genome
-totMappedReads <- 100000              # min number of reads mapping to SC2 Wuhan reference
+#totMappedReads <- 100000              # min number of reads mapping to SC2 Wuhan reference
 perMappedReads <- 65                  # min percentage of reads mapping to SC2 Wuhan reference
 numORFsThreshold <- 10                # min number of ORFs passing QC
 sGeneCovThreshold <- 95               # min percentage of bases in S gene with any coverage
@@ -49,8 +49,11 @@ sGeneFrameshiftThreshold <- FALSE     # frameshifts allowed in S gene?
 ```{r format-fnc, include=FALSE}
 highGood <- function(v, t) {
   # accepts value and threshhold and returns green if value >= threshhold and gray if not
+  # for color bar formatting
   return(ifelse(v >= t, "lightgreen", "lightgray"))
 }
+
+
 ```
 
 
@@ -71,9 +74,9 @@ sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID),
                                         bold = ifelse(pangolin_status == "passed_qc", F, T)),
             fastqc_raw_reads_1 = color_bar(color = highGood(fastqc_raw_reads_1, fastqcRawThreshold))(fastqc_raw_reads_1), 
             fastqc_raw_reads_2 = color_bar(color = highGood(fastqc_raw_reads_2, fastqcRawThreshold))(fastqc_raw_reads_2),
-            seqyclean_percent_kept_after_cleaning = cell_spec(seqyclean_percent_kept_after_cleaning, 
-                                        background = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, "red", ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, "yellow", "white")), 
-                                        bold = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, T, ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, T, F))),
+            # seqyclean_percent_kept_after_cleaning = cell_spec(seqyclean_percent_kept_after_cleaning, 
+            #                             background = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, "red", ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, "yellow", "white")), 
+            #                             bold = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, T, ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, T, F))),
             depth_after_trimming = cell_spec(depth_after_trimming, 
                                              color = ifelse(depth_after_trimming >= depthAfterTrimThreshold, "black", "red"), 
                                              bold = ifelse(depth_after_trimming >= depthAfterTrimThreshold, F, T)),
@@ -83,21 +86,21 @@ sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID),
             # `%_human_reads` = cell_spec(`%_human_reads`, 
             #                                     color = ifelse(`%_human_reads` < perHumanThreshold, "black", "red"), 
             #                                     bold = ifelse(`%_human_reads` < perHumanThreshold, F, T)),
-            `%_SARS-COV-2_reads` = cell_spec(`%_SARS-COV-2_reads`, 
-                                                color = ifelse(`%_SARS-COV-2_reads` >= perSC2Threshold, "black", "red"), 
-                                                bold = ifelse(`%_SARS-COV-2_reads` >= perSC2Threshold, F, T)),
+            # `%_SARS-COV-2_reads` = cell_spec(`%_SARS-COV-2_reads`, 
+            #                                     color = ifelse(`%_SARS-COV-2_reads` >= perSC2Threshold, "black", "red"), 
+            #                                     bold = ifelse(`%_SARS-COV-2_reads` >= perSC2Threshold, F, T)),
             `%_N` = cell_spec(`%_N`, 
                               color = ifelse(`%_N` >= perNThreshold, "red", "black"), 
                               bold = ifelse(`%_N` >= perNThreshold, T, F)),
             vadr_status = cell_spec(vadr_status, 
                                      color = ifelse(vadr_status == "PASS", "black", "red"), 
                                      bold = ifelse(vadr_status == "PASS", F, T)),
-            Total_Reads_Analyzed = cell_spec(Total_Reads_Analyzed,
-                                             color = ifelse(Total_Reads_Analyzed < totMappedReads, "red", "black"), 
-                              bold = ifelse(Total_Reads_Analyzed < totMappedReads, T, F)),
-            Percent.Mapped.Reads = cell_spec(Percent.Mapped.Reads,
-                                             color = ifelse(Percent.Mapped.Reads < perMappedReads, "red", "black"), 
-                              bold = ifelse(Percent.Mapped.Reads < perMappedReads, T, F)),
+            # Total_Reads_Analyzed = cell_spec(Total_Reads_Analyzed,
+            #                                  color = ifelse(Total_Reads_Analyzed < totMappedReads, "red", "black"), 
+            #                   bold = ifelse(Total_Reads_Analyzed < totMappedReads, T, F)),
+            `%_Reads_Matching_SC2_Ref` = cell_spec(`%_Reads_Matching_SC2_Ref`,
+                                             color = ifelse(`%_Reads_Matching_SC2_Ref` < perMappedReads, "red", "black"), 
+                              bold = ifelse(`%_Reads_Matching_SC2_Ref` < perMappedReads, T, F)),
             ORFs.Passing.QC = cell_spec(ORFs.Passing.QC,
                                         color = ifelse(ORFs.Passing.QC < numORFsThreshold, "red", "black"), 
                               bold = ifelse(ORFs.Passing.QC < numORFsThreshold, T, F)),
@@ -145,7 +148,6 @@ colnames(sumTab) <- c("Sample.ID",
                       "Length.Longest.Del",
                       "pangoLEARN.v",
                       "#Lineage.Subs",
-                      "Percent.Mapped.Reads",
                       "GenBank#",
                       "ORFs.Passing.QC",
                       "Coverage.S",
