index.Rmd handling NA in formating table

--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -99,20 +99,20 @@ sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID),
             #                                  color = ifelse(Total_Reads_Analyzed < totMappedReads, "red", "black"), 
             #                   bold = ifelse(Total_Reads_Analyzed < totMappedReads, T, F)),
             `%_Reads_Matching_SC2_Ref` = cell_spec(`%_Reads_Matching_SC2_Ref`,
-                                             color = ifelse(`%_Reads_Matching_SC2_Ref` < perMappedReads, "red", "black"), 
-                              bold = ifelse(`%_Reads_Matching_SC2_Ref` < perMappedReads, T, F)),
+                                                   color = ifelse(`%_Reads_Matching_SC2_Ref` < perMappedReads, "red", "black"), 
+                                                   bold = ifelse(`%_Reads_Matching_SC2_Ref` < perMappedReads, T, F)),
             ORFs.Passing.QC = cell_spec(ORFs.Passing.QC,
                                         color = ifelse(ORFs.Passing.QC < numORFsThreshold, "red", "black"), 
-                              bold = ifelse(ORFs.Passing.QC < numORFsThreshold, T, F)),
+                                        bold = ifelse(ORFs.Passing.QC < numORFsThreshold, T, F)),
             Coverage.S = cell_spec(Coverage.S, 
-                                   color = ifelse(Coverage.S < sGeneCovThreshold, "red", "black"), 
-                              bold = ifelse(Coverage.S < sGeneCovThreshold, T, F)),
+                                   color = ifelse(is.na(Coverage.S) == TRUE | Coverage.S < sGeneCovThreshold, "red", "black"), 
+                                   bold = ifelse(is.na(Coverage.S) == TRUE | Coverage.S < sGeneCovThreshold, T, F)),
             Percent.Ns.S = cell_spec(Percent.Ns.S,
                                      color = ifelse(Percent.Ns.S >= sPerNThreshold, "red", "black"), 
-                              bold = ifelse(Percent.Ns.S >= sPerNThreshold, T, F)),
+                                     bold = ifelse(Percent.Ns.S >= sPerNThreshold, T, F)),
             vdr_sgene_orfshift = cell_spec(vdr_sgene_orfshift,
                                            color = ifelse(vdr_sgene_orfshift != sGeneFrameshiftThreshold, "red", "black"), 
-                              bold = ifelse(vdr_sgene_orfshift != sGeneFrameshiftThreshold, T, F)))
+                                           bold = ifelse(vdr_sgene_orfshift != sGeneFrameshiftThreshold, T, F)))
 
 # Make column names nicer
 colnames(sumTab) <- c("Sample.ID", 
