index.Rmd handling NA in formating table again

--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -108,8 +108,8 @@ sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID),
                                    color = ifelse(is.na(Coverage.S) == TRUE | Coverage.S < sGeneCovThreshold, "red", "black"), 
                                    bold = ifelse(is.na(Coverage.S) == TRUE | Coverage.S < sGeneCovThreshold, T, F)),
             Percent.Ns.S = cell_spec(Percent.Ns.S,
-                                     color = ifelse(Percent.Ns.S >= sPerNThreshold, "red", "black"), 
-                                     bold = ifelse(Percent.Ns.S >= sPerNThreshold, T, F)),
+                                     color = ifelse(is.na(Percent.Ns.S) | Percent.Ns.S >= sPerNThreshold, "red", "black"), 
+                                     bold = ifelse(is.na(Percent.Ns.S) | Percent.Ns.S >= sPerNThreshold, T, F)),
             vdr_sgene_orfshift = cell_spec(vdr_sgene_orfshift,
                                            color = ifelse(vdr_sgene_orfshift != sGeneFrameshiftThreshold, "red", "black"), 
                                            bold = ifelse(vdr_sgene_orfshift != sGeneFrameshiftThreshold, T, F)))
