--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -110,9 +110,9 @@ sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID),
             Percent.Ns.S = cell_spec(Percent.Ns.S,
                                      color = ifelse(is.na(Percent.Ns.S) | Percent.Ns.S >= sPerNThreshold, "red", "black"), 
                                      bold = ifelse(is.na(Percent.Ns.S) | Percent.Ns.S >= sPerNThreshold, T, F)),
-            vdr_sgene_orfshift = cell_spec(vdr_sgene_orfshift,
-                                           color = ifelse(vdr_sgene_orfshift != sGeneFrameshiftThreshold, "red", "black"), 
-                                           bold = ifelse(vdr_sgene_orfshift != sGeneFrameshiftThreshold, T, F)))
+            vdr_sgene_orftshift = cell_spec(vdr_sgene_orfshift,
+                                           color = ifelse(vdr_sgene_orftshift != sGeneFrameshiftThreshold, "red", "black"), 
+                                           bold = ifelse(vdr_sgene_orftshift != sGeneFrameshiftThreshold, T, F)))
 
 # Make column names nicer
 colnames(sumTab) <- c("Sample.ID", 
