Updating index.Rmd with explicit column renaming instead of positional

--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -52,8 +52,6 @@ highGood <- function(v, t) {
   # for color bar formatting
   return(ifelse(v >= t, "lightgreen", "lightgray"))
 }
-
-
 ```
 
 
@@ -112,48 +110,50 @@ sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID),
                                      bold = ifelse(is.na(Percent.Ns.S) | Percent.Ns.S >= sPerNThreshold, T, F)),
             vdr_sgene_orftshift = cell_spec(vdr_sgene_orftshift,
                                            color = ifelse(vdr_sgene_orftshift != sGeneFrameshiftThreshold, "red", "black"), 
-                                           bold = ifelse(vdr_sgene_orftshift != sGeneFrameshiftThreshold, T, F)))
+                                           bold = ifelse(vdr_sgene_orftshift != sGeneFrameshiftThreshold, T, F)),
+            S_aa_INDELs = str_replace_all(S_aa_INDELs, c("," = ", ")))
 
 # Make column names nicer
-colnames(sumTab) <- c("Sample.ID", 
-                      "Sample.Name", 
-                      "Pangolin", 
-                      "Pangolin.QC", 
-                      "NextClade", 
-                      "#FastQC.R1", 
-                      "#FastQC.R2", 
-                      "#Seqyclean.Pairs", 
-                      "%Seqyclean.Pairs", 
-                      "Depth.Post.Trim", 
-                      "Coverage.Post.Trim", 
-                      "%Human.Reads", 
-                      "%SC2.Reads", 
-                      "#iVar.Variants", 
-                      "#BCFTools.Variants", 
-                      "#BEDTools.Failed.Amps", 
-                      "#SAMTools.Failed.Amps", 
-                      "#N", 
-                      "#Degenerate", 
-                      "#ACTG", 
-                      "#Total.Bases", 
-                      "Total.Reads.Analyzed", 
-                      "%N", 
-                      "Mean.Cov.Depth", 
-                      "%Reads.Mapping.SC2", 
-                      "Vadr", 
-                      "Vadr.All.ORF.Shift",
-                      "Vadr.S.ORF.Shift", 
-                      "AA.Changes.S",
-                      "Length.Longest.Insert", 
-                      "Length.Longest.Del",
-                      "pangoLEARN.v",
-                      "#Lineage.Subs",
-                      "GenBank#",
-                      "ORFs.Passing.QC",
-                      "Coverage.S",
-                      "Mean.Depth.S",
-                      "Percent.Pos.Min.Cov.S",
-                      "Percent.Ns.S"
+sumTab <- select(sumTab,
+                 Sample.ID = sample_id, 
+                 Sample.Name = sample, 
+                 Pangolin = pangolin_lineage, 
+                 Pangolin.QC = pangolin_status, 
+                 NextClade = nextclade, 
+                 `#FastQC.R1` = fastqc_raw_reads_1, 
+                 `#FastQC.R2` = fastqc_raw_reads_2, 
+                 `#Seqyclean.Pairs` = seqyclean_pairs_kept_after_cleaning, 
+                 `%Seqyclean.Pairs` = seqyclean_percent_kept_after_cleaning, 
+                 Depth.Post.Trim = depth_after_trimming, 
+                 Coverage.Post.Trim = coverage_after_trimming, 
+                 `%Human.Reads` = `%_human_reads`, 
+                 `%SC2.Reads` = `%_SARS-COV-2_reads`, 
+                 `#iVar.Variants` = ivar_num_variants_identified, 
+                 `#BCFTools.Variants` = bcftools_variants_identified, 
+                 `#BEDTools.Failed.Amps` = bedtools_num_failed_amplicons, 
+                 `#SAMTools.Failed.Amps` = samtools_num_failed_amplicons, 
+                 `#N` = num_N, 
+                 `#Degenerate` = num_degenerage, 
+                 `#ACTG` = num_ACTG, 
+                 `#Total.Bases` = num_total, 
+                 Total.Reads.Analyzed, 
+                 `%N` = `%_N`, 
+                 Mean.Cov.Depth = ave_cov_depth, 
+                 `%Reads.Mapping.SC2` = `%_Reads_Matching_SC2_Ref`, 
+                 Vadr = vadr_status, 
+                 Vadr.All.ORF.Shift = vdr_sample_orfshift,
+                 Vadr.S.ORF.Shift = vdr_sgene_orftshift, 
+                 AA.Changes.S = S_aa_INDELs,
+                 Length.Longest.Insert = len_largest_insertion, 
+                 Length.Longest.Del = len_largest_deletion,
+                 pangoLEARN.v = pangoLEARN_version,
+                 `#Lineage.Subs` = pangolin_subs,
+                 `GenBank#`,
+                 ORFs.Passing.QC,
+                 Coverage.S,
+                 Mean.Depth.S,
+                 Percent.Pos.Min.Cov.S,
+                 Percent.Ns.S
 )
 
 # Insert Sample.Name column into table at every nth column (params$sampleIDInsertFreq) position
