Updating index.Rmd with explicit column renaming instead of positional - corrected typo

--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -119,7 +119,7 @@ sumTab <- select(sumTab,
                  Sample.Name = sample, 
                  Pangolin = pangolin_lineage, 
                  Pangolin.QC = pangolin_status, 
-                 NextClade = nextclade, 
+                 NextClade = nextclade_clade, 
                  `#FastQC.R1` = fastqc_raw_reads_1, 
                  `#FastQC.R2` = fastqc_raw_reads_2, 
                  `#Seqyclean.Pairs` = seqyclean_pairs_kept_after_cleaning, 
