Updating index.Rmd with explicit column renaming instead of positional - corrected another typo

--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -136,7 +136,7 @@ sumTab <- select(sumTab,
                  `#Degenerate` = num_degenerage, 
                  `#ACTG` = num_ACTG, 
                  `#Total.Bases` = num_total, 
-                 Total.Reads.Analyzed, 
+                 Total.Reads.Analyzed = Total_Reads_Analyzed, 
                  `%N` = `%_N`, 
                  Mean.Cov.Depth = ave_cov_depth, 
                  `%Reads.Mapping.SC2` = `%_Reads_Matching_SC2_Ref`, 
