Rearranged columns in index.Rmd to put QC-relevant columns up front

--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -104,16 +104,25 @@ sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID),
 # Make column names nicer
 sumTab <- select(sumTab,
                  Sample.ID = sample_id, 
-                 Sample.Name = sample, 
-                 Pangolin = pangolin_lineage, 
-                 Pangolin.QC = pangolin_status, 
-                 NextClade = nextclade_clade, 
-                 `#FastQC.R1` = fastqc_raw_reads_1, 
-                 `#FastQC.R2` = fastqc_raw_reads_2, 
-                 `#Seqyclean.Pairs` = seqyclean_pairs_kept_after_cleaning, 
-                 `%Seqyclean.Pairs` = seqyclean_percent_kept_after_cleaning, 
+                 Sample.Name = sample,  
                  Depth.Post.Trim = depth_after_trimming, 
                  Coverage.Post.Trim = coverage_after_trimming, 
+                 `#FastQC.R1` = fastqc_raw_reads_1, 
+                 `#FastQC.R2` = fastqc_raw_reads_2, 
+                 `%Reads.Mapping.SC2` = `%_Reads_Matching_SC2_Ref`, 
+                 ORFs.Passing.QC, 
+                 Coverage.S, 
+                 Pangolin = pangolin_lineage, 
+                 Pangolin.QC = pangolin_status, 
+                 `#Lineage.Subs` = pangolin_subs, 
+                 pangoLEARN.v = pangoLEARN_version, 
+                 `GenBank#`, 
+                 `%N` = `%_N`, 
+                 Percent.Ns.S, 
+                 Vadr.S.ORF.Shift = vdr_sgene_orftshift, 
+                 NextClade = nextclade_clade, 
+                 `#Seqyclean.Pairs` = seqyclean_pairs_kept_after_cleaning, 
+                 `%Seqyclean.Pairs` = seqyclean_percent_kept_after_cleaning, 
                  `%Human.Reads` = `%_human_reads`, 
                  `%SC2.Reads` = `%_SARS-COV-2_reads`, 
                  `#iVar.Variants` = ivar_num_variants_identified, 
@@ -125,23 +134,14 @@ sumTab <- select(sumTab,
                  `#ACTG` = num_ACTG, 
                  `#Total.Bases` = num_total, 
                  Total.Reads.Analyzed = Total_Reads_Analyzed, 
-                 `%N` = `%_N`, 
                  Mean.Cov.Depth = ave_cov_depth, 
-                 `%Reads.Mapping.SC2` = `%_Reads_Matching_SC2_Ref`, 
                  Vadr = vadr_status, 
                  Vadr.All.ORF.Shift = vdr_sample_orfshift,
-                 Vadr.S.ORF.Shift = vdr_sgene_orftshift, 
                  AA.Changes.S = S_aa_INDELs,
                  Length.Longest.Insert = len_largest_insertion, 
                  Length.Longest.Del = len_largest_deletion,
-                 pangoLEARN.v = pangoLEARN_version,
-                 `#Lineage.Subs` = pangolin_subs,
-                 `GenBank#`,
-                 ORFs.Passing.QC,
-                 Coverage.S,
                  Mean.Depth.S,
-                 Percent.Pos.Min.Cov.S,
-                 Percent.Ns.S
+                 Percent.Pos.Min.Cov.S
 )
 
 # Insert Sample.Name column into table at every nth column (params$sampleIDInsertFreq) position
